--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             </div>
             <div class="box3 box">
                 <div class="box-content">
-                    <h3>Raksha Bandhan Special</h3>
-                    <div class="box_img" style="background-image: url('box.jpeg');"></div>
+                    <h3>Clothing</h3>
+                    <div class="box_img" style="background-image: url('box1_image.jpg');"></div>
                     <p class="shop-now">Shop now</p>
                 </div>
             </div>
